valid formázott resp elötti

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,12 @@
     <meta name="keywords" content="gyakorlas, 10.21, orai munka">
     <meta name="author" content="Dreilinger Vanessza Maja">
     <link rel="stylesheet" href="stilus.css">
-        <title>Dreilinger Vanessza Maja</title>
+    <title>Dreilinger Vanessza Maja</title>
 </head>
+
 <body>
     <main>
+        <header></header>
         <nav>
             <ul>
                 <li><a href="index.html">Főoldal</a></li>
@@ -21,23 +24,27 @@
         <article>
             <section>
                 <h1>Bevezetés</h1>
-            <p>Az oldal játékokat mutat be és leírásokat ad a jelenlegi updatekről, a jövőbeli frissítésekről, a játékok tartalmairól, karaktereiről, vagy éppen fegyvereiről a játékmenethez.</p>
-            <ul>
-                <li>A witcher 4 készülőben van</li>
-                <li>GTA 7 modok megjelentek</li>
-                <li>Egy Kóreai játékos kijátszotta a League of Legendset</li>
-                <li>Sylvanas Elpusztult Gorran a új warchief és Zerodemon az Új Lich King által</li>
-                <li>A Mókusok jobb gamerek mint a Lengyelek és a Csehek?</li>
-                <li>A káromkodás erősebbé teszi a karaktereidet!!!</li>
-            </ul>
+                <p>Az oldal játékokat mutat be és leírásokat ad a jelenlegi updatekről, a jövőbeli frissítésekről, a
+                    játékok tartalmairól, karaktereiről, vagy éppen fegyvereiről a játékmenethez.
+                </p>
+                <ul>
+                    <li>A witcher 4 készülőben van</li>
+                    <li>GTA 7 modok megjelentek</li>
+                    <li>Egy Kóreai játékos kijátszotta a League of Legendset</li>
+                    <li>Sylvanas Elpusztult Gorran a új warchief és Zerodemon az Új Lich King által</li>
+                    <li>A Mókusok jobb gamerek mint a Lengyelek és a Csehek?</li>
+                    <li>A káromkodás erősebbé teszi a karaktereidet!!!</li>
+                </ul>
+
             </section>
             <div class="kep">
-               <img src="kepek/witcher.jpg" alt="Witcher">
+                <img src="kepek/witcher.jpg" alt="Witcher">
             </div>
         </article>
-        <footer>©Minden jog fenntartva</footer>
+        <footer>©Minden jog fenntartva!</footer>
     </main>
-    
-    
+
+
 </body>
+
 </html>
