--- a/tablazat.html
+++ b/tablazat.html
@@ -14,24 +14,27 @@
 
 <body>
     <main>
+        <header></header>
         <nav>
             <ul>
                 <li><a href="index.html">Főoldal</a></li>
-                <li><a href="tablazat.html">Regisztáció</a></li>
+                <li><a href="#">Regisztáció</a></li>
             </ul>
         </nav>
         <article>
             <table>
                 <thead>
-                    <th>Játék neve</th>
-                    <th>Platform</th>
-                    <th>Megjelenés</th>
+                    <tr>
+                        <th>Játék neve</th>
+                        <th>Platform</th>
+                        <th>Megjelenés</th>
+                    </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>The Division 2</td>
                         <td>Xbox One, PlayStation 4, PC</td>
-                        <td>március 15</td>
+                        <td>március 15.</td>
                     </tr>
                     <tr>
                         <td>Sekiro: Shadows Die Twice</td>
