responzív kész oldal

--- a/tablazat.html
+++ b/tablazat.html
@@ -43,6 +43,9 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="kep">
+                <img src="kepek/witcher.jpg" alt="Witcher">
+            </div>
         </article>
         <footer>©Minden jog fenntartva</footer>
     </main>
